@@ -139,6 +139,13 @@ public abstract class GoogleHadoopFileSystemTestBase extends HadoopFileSystemTes
   public abstract void testConfigureBucketsSuccess()
       throws URISyntaxException, IOException;
 
+  @Test
+  public abstract void testConfigureBucketsWithRootBucketButNoSystemBucket() throws IOException;
+
+  @Test
+  public abstract void testConfigureBucketsWithNeitherRootBucketNorSystemBucket()
+      throws IOException;
+
   // -----------------------------------------------------------------------------------------
   // Tests that aren't supported by all configurations of GHFS.
   // -----------------------------------------------------------------------------------------
